--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -209,3 +209,30 @@ h1,h2,h3,h4,h5,h6,p {
     margin-top: 5px;
     margin-bottom: 20px;
 }
+/*   MODAL   */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-main {
+    position:fixed;
+    background: white;
+    width: 80%;
+    height: auto;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+.display-block {
+    display: block;
+}
+
+.display-none {
+    display: none;
+}
