--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -4,6 +4,10 @@
 * {
     font-family: 'Open Sans', sans-serif;
 }
+
+$primary-color : #2f4f4f;
+$secondary-color : #123456;
+
 html, body, #root {
     width: 100%;
     height: 100%;
@@ -34,7 +38,7 @@ h1,h2,h3,h4,h5,h6,p {
 .sidebar {
     grid-column: 1 / 3;
     grid-row: 1 / 12;
-    background: darkslategrey;
+    background: $secondary-color;
     border-right: 1px solid #010202;
     position: fixed;
     min-height: 100%;
@@ -217,7 +221,6 @@ h1,h2,h3,h4,h5,h6,p {
     width:100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
-    z-index: 99;
 }
 .modal-header {
     background: #2f4f4f;
