--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,6 +68,7 @@ h1,h2,h3,h4,h5,h6,p {
     display: block;
     border-bottom: 1px solid #b7b7b7;
     position: fixed;
+    z-index: 1;
 }
 .header-nav a {
     float: right;
