--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,16 @@ h1,h2,h3,h4,h5,h6,p {
 }
 .index-container {
     margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(60px, auto);
+    min-height: 100%;
+}
+.view-content {
+    grid-column: 1 / 10;
+}
+.right-sidebar-content {
+    grid-column: 10 / 13;
 }
 .main-content {
     grid-column: 3 / 13;
@@ -131,7 +141,7 @@ h1,h2,h3,h4,h5,h6,p {
     border-spacing:5px 5px;
 }
 .cell-table {
-    padding: 0px 10px;
+    padding: 10px 10px;
     font-size: 15px;
 }
 .cell-table .material-icons {
@@ -140,12 +150,25 @@ h1,h2,h3,h4,h5,h6,p {
 .cell-table .material-icons:hover {
     color: #5b9494;
 }
+.cell-table button {
+    background: transparent;
+    padding: 5px;
+}
+.cell-state {
+    padding-bottom: 0px;
+}
+.onboard-repair {
+    color: orange !important;
+}
+.finish-repair {
+    color: green !important;
+}
 .wrapper-content {
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(3, 33.33%);
     width: 95%;
     grid-gap: 1%;
-    margin-left: 1%;
+    margin: 15px;
 }
 .box-product {
     float: left;
