--- a/src/core/components/button/button.module.css
+++ b/src/core/components/button/button.module.css
@@ -1,10 +1,14 @@
 .button {
   appearance: none;
   border: none;
-  background-color: var(--button-background);
+  background-color: #2f4f4f;
+  padding: 5px 10px;
+  color: white;
+  border-radius: 5px;
+  /*background-color: var(--button-background);
   color: var(--button-text);
   padding: var(--m);
-  border-radius: var(--radius);
+  border-radius: var(--radius);*/
   font-size: inherit;
   border: 1px solid var(--gray-color-900);
   transition: 0.5s ease transform;
@@ -13,6 +17,10 @@
 .button:hover {
   cursor: pointer;
   filter: brightness(120%);
+}
+
+.button .material-icons {
+  color: white;
 }
 
 .primary {
