--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,30 @@ h1,h2,h3,h4,h5,h6,p {
     grid-auto-rows: minmax(60px, auto);
     min-height: 100%;
 }
+.login-page {
+    grid-column: 1 / 13;
+    grid-row: 1 / 12;
+    display: grid;
+    background: url("../images/login-background.jpg") no-repeat;
+    background-size: cover;
+}
+.login-page .main-content {
+    grid-column: 5 / 13;
+    grid-row: 1 / 12;
+    -webkit-filter: none;
+    filter: none;
+    background: linear-gradient(0.25turn, #8dbaba, darkslategrey);
+}
+.login-page .main-content h3 {
+    text-align: center;
+    color: #444444;
+}
+.form-login {
+    display: block;
+    max-width: fit-content;
+    max-height: fit-content;
+    margin-top: 20%;
+}
 .sidebar {
     grid-column: 1 / 3;
     grid-row: 1 / 12;
@@ -140,9 +164,16 @@ h1,h2,h3,h4,h5,h6,p {
     border-collapse:separate;
     border-spacing:5px 5px;
 }
+.table-data .cell-table {
+    display: table-cell;
+}
 .cell-table {
     padding: 10px 10px;
     font-size: 15px;
+    display: inline-block;
+}
+.padding-b-0 {
+    padding-bottom: 0px;
 }
 .cell-table .material-icons {
     color: darkslategrey;
@@ -153,9 +184,6 @@ h1,h2,h3,h4,h5,h6,p {
 .cell-table button {
     background: transparent;
     padding: 5px;
-}
-.cell-state {
-    padding-bottom: 0px;
 }
 .onboard-repair {
     color: orange !important;
@@ -177,7 +205,7 @@ h1,h2,h3,h4,h5,h6,p {
     max-width: 100%;
     margin-bottom: 10px;
     background: white;
-    min-height: 415px;
+    min-height: 475px;
     box-shadow: 0px 0px 3px 1px #cfcfcf;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -210,6 +238,10 @@ h1,h2,h3,h4,h5,h6,p {
     border-bottom-left-radius: 5px;
     height: 40px;
 }
+.box-product .box-product-controls tr {
+    display: flex;
+    justify-content: space-between;
+}
 .box-product .cell-table .material-icons {
     font-size: 20px;
     vertical-align: sub;
@@ -225,11 +257,21 @@ h1,h2,h3,h4,h5,h6,p {
 .form-type-post label {
     font-size: 14px;
 }
-.form-type-post input, .form-type-post textarea{
+.form-type-post input, .form-type-post textarea {
     background: #fafafa;
     border: 1px solid #efefef;
     padding: 5px;
-    min-width: 300px;
+    width: 285px;
+    max-width: 285px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.form-type-post select {
+    background: #fafafa;
+    border: 1px solid #efefef;
+    padding: 5px;
+    width: 295px;
+    max-width: 295px;
     margin-top: 5px;
     margin-bottom: 20px;
 }
@@ -240,7 +282,7 @@ h1,h2,h3,h4,h5,h6,p {
     left: 0;
     width:100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
     z-index: 99;
 }
 .modal-header {
@@ -255,6 +297,10 @@ h1,h2,h3,h4,h5,h6,p {
 }
 .modal-header Button {
     float: right;
+    padding: 3px 0px 0px;
+}
+.modal-header button span {
+    font-size: 20px;
 }
 .modal-header Button:hover {
     transform: none;
@@ -263,13 +309,16 @@ h1,h2,h3,h4,h5,h6,p {
 .modal-main {
     position:fixed;
     background: white;
-    width: 30%;
+    width: 21%;
     height: auto;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
 }
 
+#modal-repair .modal-main{
+    width: 21%;
+}
 .display-block {
     display: block;
 }
