--- a/public/stylesheets/style.module.css
+++ b/public/stylesheets/style.module.css
@@ -31,6 +31,31 @@ h1,h2,h3,h4,h5,h6,p {
     grid-auto-rows: minmax(60px, auto);
     min-height: 100%;
 }
+.login-page {
+    grid-column: 1 / 13;
+    grid-row: 1 / 12;
+    display: grid;
+    background: url("../images/login-background.jpg") no-repeat;
+    background-size: cover;
+}
+.login-page .main-content {
+    grid-column: 5 / 13;
+    grid-row: 1 / 12;
+    -webkit-filter: none;
+    filter: none;
+    background: linear-gradient(0.25turn, #8dbaba, #8dbaba, darkslategrey);
+}
+.login-page .main-content h3 {
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #111111;
+}
+.form-login {
+    display: block;
+    max-width: fit-content;
+    max-height: fit-content;
+    margin-top: 20%;
+}
 .sidebar {
     grid-column: 1 / 3;
     grid-row: 1 / 12;
@@ -68,6 +93,7 @@ h1,h2,h3,h4,h5,h6,p {
     display: block;
     border-bottom: 1px solid #b7b7b7;
     position: fixed;
+    z-index: 1;
 }
 .header-nav a {
     float: right;
@@ -84,6 +110,16 @@ h1,h2,h3,h4,h5,h6,p {
 }
 .index-container {
     margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(60px, auto);
+    min-height: 100%;
+}
+.view-content {
+    grid-column: 1 / 10;
+}
+.right-sidebar-content {
+    grid-column: 10 / 13;
 }
 .main-content {
     grid-column: 3 / 13;
@@ -129,9 +165,16 @@ h1,h2,h3,h4,h5,h6,p {
     border-collapse:separate;
     border-spacing:5px 5px;
 }
+.table-data .cell-table {
+    display: table-cell;
+}
 .cell-table {
-    padding: 0px 10px;
+    padding: 10px 10px;
     font-size: 15px;
+    display: inline-block;
+}
+.padding-b-0 {
+    padding-bottom: 0px;
 }
 .cell-table .material-icons {
     color: darkslategrey;
@@ -139,12 +182,22 @@ h1,h2,h3,h4,h5,h6,p {
 .cell-table .material-icons:hover {
     color: #5b9494;
 }
+.cell-table button {
+    background: transparent;
+    padding: 5px;
+}
+.onboard-repair {
+    color: orange !important;
+}
+.finish-repair {
+    color: green !important;
+}
 .wrapper-content {
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(3, 33.33%);
     width: 95%;
     grid-gap: 1%;
-    margin-left: 1%;
+    margin: 15px;
 }
 .box-product {
     float: left;
@@ -153,7 +206,7 @@ h1,h2,h3,h4,h5,h6,p {
     max-width: 100%;
     margin-bottom: 10px;
     background: white;
-    min-height: 415px;
+    min-height: 540px;
     box-shadow: 0px 0px 3px 1px #cfcfcf;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -170,11 +223,32 @@ h1,h2,h3,h4,h5,h6,p {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+.box-product h5 {
+    padding: 3px 10px;
+    text-transform: uppercase;
+    background-color: #fafafa;
+    margin-left: 0px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #e8e8e8;
+    border-top: 1px solid #e8e8e8;
+    color: darkslategrey;
+}
+.box-product .productsAssoc-list {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
 .box-product p {
     margin: 10px;
     width: 95%;
-    max-height: 100px;
+    min-height: 60px;
     font-size: 15px;
+}
+.box-product .related-products {
+    font-size: 12px;
+    margin-left: 10px;
+    word-break: break-word;
 }
 .box-product .box-product-controls {
     width: 100%;
@@ -186,6 +260,10 @@ h1,h2,h3,h4,h5,h6,p {
     border-bottom-left-radius: 5px;
     height: 40px;
 }
+.box-product .box-product-controls tr {
+    display: flex;
+    justify-content: space-between;
+}
 .box-product .cell-table .material-icons {
     font-size: 20px;
     vertical-align: sub;
@@ -193,7 +271,7 @@ h1,h2,h3,h4,h5,h6,p {
 .form-type-post {
     max-width: 100%;
     background: white;
-    margin: 15px;
+    margin: 30px;
     padding: 20px;
     box-shadow: 0px 0px 3px 1px #cfcfcf;
     border-radius: 3px;
@@ -201,11 +279,21 @@ h1,h2,h3,h4,h5,h6,p {
 .form-type-post label {
     font-size: 14px;
 }
-.form-type-post input, .form-type-post textarea{
+.form-type-post input, .form-type-post textarea {
     background: #fafafa;
     border: 1px solid #efefef;
     padding: 5px;
-    min-width: 300px;
+    width: 285px;
+    max-width: 285px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.form-type-post select {
+    background: #fafafa;
+    border: 1px solid #efefef;
+    padding: 5px;
+    width: 295px;
+    max-width: 295px;
     margin-top: 5px;
     margin-bottom: 20px;
 }
@@ -216,19 +304,43 @@ h1,h2,h3,h4,h5,h6,p {
     left: 0;
     width:100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 99;
 }
-
+.modal-header {
+    background: #2f4f4f;
+    color: white;
+    padding: 7px 10px;
+    height: auto;
+    display: flow-root;
+}
+.modal-header h3 {
+    float: left;
+}
+.modal-header Button {
+    float: right;
+    padding: 3px 0px 0px;
+}
+.modal-header button span {
+    font-size: 20px;
+}
+.modal-header Button:hover {
+    transform: none;
+    cursor: pointer;
+}
 .modal-main {
     position:fixed;
     background: white;
-    width: 30%;
+    width: 21%;
     height: auto;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
 }
 
+#modal-repair .modal-main{
+    width: 21%;
+}
 .display-block {
     display: block;
 }
